# openstreetmap-tile-analyze

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
include/: datfile.hpp  parser.hpp  types.hpp
src/: datfile.cpp  main.cpp  parser.cpp  types.cpp
test/: test_parser.cpp
test/data/: corrupt.log.xz  simple.log.xz  unparseable.log.xz
